--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "material-paper": "^0.0.8",
     "react": "^18.2.0",
     "react-bar-chart": "^0.1.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.3.0",
