--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
+    "axios": "^0.27.2",   
     "jwt-decode": "^3.1.2",
     "material-paper": "^0.0.8",
     "react": "^18.2.0",
@@ -21,6 +21,7 @@
     "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.7",
     "recharts": "^2.1.14",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
