--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "material-paper": "^0.0.8",
     "react": "^18.2.0",
